# sentiment_analysis

./: .gitignore  README.md  pyproject.toml  pytest.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: python.yml
sentiment_analysis/: calculate_costs.py  calculate_costs_test.py  utils.py
sentiment_analysis/aws/: config_session.py  config_session_test.py
sentiment_analysis/checklist/: convert_predictions.py  dump_predictions_pipeline.py  pipeline.py
sentiment_analysis/data_inspection/: inspect_huggingface_data.py
sentiment_analysis/data_loaders/: allocine_loader.py  huggingface_loader.py  huggingface_loader_test.py  imdb_loader.py  rotten_tomatoes_loader.py  semeval_loader.py  semeval_loader_test.py  sentiment140_loader.py
sentiment_analysis/datasets/semeval2017/: README.md
sentiment_analysis/datasets/semeval2017/4A-English/: SemEval2017-task4-dev.subtask-A.english.INPUT copy.txt
sentiment_analysis/datasets/semeval2017/4B-Arabic/: SemEval2017-task4-dev.subtask-BD.arabic.txt  SemEval2017_task4_test_scorer_subtaskB.pl  baseline-B-arabic.txt
sentiment_analysis/datasets/semeval2017/4D-Arabic/: SemEval2017-task4-dev.subtask-D.arabic.gold.txt  SemEval2017_task4_test_scorer_subtaskD.pl  baseline-D-arabic.average-train+dev.txt  (+1 more)
sentiment_analysis/datasets/spanish_arilines_tweets/: README.md  baseline.ipynb
sentiment_analysis/labels/: dataset_labels.py  mapping.py  mappings.py  mappings_test.py  model_labels.py
sentiment_analysis/models/: comprehend.py  comprehend_test.py  google_natural_language.py  google_natural_language_test.py
(+4 files in other folders)
