[tool.poetry]
name = "sentiment_analysis"
version = "0.1.0"
description = ""
authors = ["Gabe <wei.g.chu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
boto3 = "^1.16.17"
python-decouple = "^3.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"
flake8 = "^3.7.9"
mypy = "^0.761"
moto = "^1.3.16"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[mypy]
check_untyped_defs = true
ignore_errors = false
ignore_missing_imports = true
strict_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
